<resources>
    <string name="app_name">MyMove</string>
    <string name="poster_K_films">Movie poster</string>
    <string name="poster_K_films2">Movie poster</string>
    <string name="Relies_Date">By release date</string>
    <string name="Top">By rating</string>
    <string name="Popularity">By popularity</string>
    <string name="nazvanit">Title :</string>
    <string name="Orig_Title">Original name :</string>
    <string name="TopReiting">Rating :</string>
    <string name="data_relis">Release Date :</string>
    <string name="Opis">Description :</string>
    <string name="todo">TODO</string>
    <string name="Delete_FrovMove">Removed from favorites</string>
    <string name="Favorite_Plus">The movie was added to favorites</string>
    <string name="Favorit">Favourites</string>
    <string name="Menu">Main</string>
    <string name="Play">Start</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>


</resources>